src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-one-is-struct.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-one-is-struct.rs:7:11
   |
LL | fn foo(mut x: Ref, y: &u32) {
   |               ---     ---- these two types are declared with different lifetimes...
LL |     x.b = y;
   |           ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

